k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-go-app
  labels:
    app: dev-go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-go-app
  template:
    metadata:
      labels:
        app: dev-go-app
    spec:
      containers:
        - name: app
          image: dev-go-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
