k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-go-app
                port:
                  number: 80
